--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </nav>
         <div class="splash">
                 <h1 id="splash-text">ARTSOUND<span id="fm">FM</span></h1>
-                <span class="splash-tag">92.7 Canberra - 90.3 Tuggeranong</span>
+                <!-- <span class="splash-tag">92.7 Canberra - 90.3 Tuggeranong</span> -->
         </div>
 
         <div class="section-content row-fluid">
