--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>ArtSoundFM | 92.7 Canberra - 90.3 Tuggeranong</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <link rel="stylesheet" href="css/slicknav.css" />
         <script src="js/jquery.slicknav.min.js"></script>
