--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
                   <p class="meta">Time: all-day</p>
                   <p class="meta">Date: Sep 19 – Oct 16</p>
                   <p class="meta">We’re asking all ArtSound listeners and presenters to complete our brief program survey as soon as possible. With your help, we will be better able to bring you the programs you...</p>
+                  <div class="read-more">Read More</div>
                 </div>
+
+                
               </div>
             </li>
              <li class="portfolio-item block">
@@ -108,6 +111,7 @@
                   <p class="meta">Time: all-day</p>
                   <p class="meta">Date: Sep 19 – Oct 16</p>
                    <p class="meta">We are looking for a Director to lead our team of staff, contractors and volunteers, with particular focus on human resource management, marketing, cultural change and financial...</p>
+                   <div class="read-more">Read More</div>
                 </div>
               </div>
             </li>
@@ -125,6 +129,7 @@
                   <p class="meta">Time: all-day</p>
                   <p class="meta">Date: Sep 19 – Oct 16</p>
                   <p class="meta">We are currently seeking donations of books, DVDs, CDs and records in good condition for our next Book and Music fair on Sunday 6 November. If you love books and music and if you love…</p>
+                  <div class="read-more">Read More</div>
                 </div>
               </div>
             </li>
