--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
         <link href="css/style.css" rel="stylesheet">
         <script src="js/script.js"></script>
     </head>
-
     <body>
-
     <nav class="navbar" id="nav">
         <div class="inner">
             <img id="logo" src="img/logo.png" alt="artsound.fm"/>
            <!-- <h1 class="logo"><a href="index.html">ArtSoundFM Logo</a><small>92.7 Canberra and 90.3 Tuggeranong</small></h1> -->
             <ul class="nav">
             <li class="active">
-                <a href="#home">Home</a>
+                <a href="#">Home</a>
             </li>
 
             <li>
@@ -32,11 +30,11 @@
             </li>
 
             <li>
-                <a href="#">Arts Diaries</a>
+                <a href="art.html">Arts Diaries</a>
             </li>
 
             <li>
-                <a href="#">Membership & Donations</a>
+                <a href="member.html">Membership & Donations</a>
             </li>
 
             <li>
