--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
     <nav class="navbar" id="nav">
         <div class="inner">
-            <img id="logo" src="img/logo.png" alt="artsound.fm"/>
+            <img id="logo" src="img/logo.png" alt="artsound.fm logo"/>
            <!-- <h1 class="logo"><a href="index.html">ArtSoundFM Logo</a><small>92.7 Canberra and 90.3 Tuggeranong</small></h1> -->
             <ul class="nav">
             <li class="active">
@@ -47,6 +47,15 @@
             
         </div>
 </nav>
+  <section id="player">
+        <div class="player-container contain">
+            <i class="fa fa-volume-off" aria-hidden="true"></i>
+            <i class="fa fa-play-circle play-icon" aria-hidden="true"></i>
+            <i class="fa fa-volume-up" aria-hidden="true"></i>
+            <h3>NOW PLAYING: Band of Horses - The Funeral</h3>
+             
+        </div>
+    </section>
         <div class="splash">
             <div class="tiles">
                 <img src="img/1.png">
@@ -112,7 +121,7 @@
                 <h2 class="section-content-title"><a class="event-title-link">Listener Survey</a></h2>
 
                 <div class="screenshot">
-                  <img alt="Web &amp; UI Design" src="img/1.png" />
+                  <img alt="listener survey - drum kit image" src="img/1.png" />
                 </div>
 
                 <div class="caption">
@@ -132,7 +141,7 @@
                 <h2 class="section-content-title"><a class="event-title-link">Members’ Week</a></h2>
 
                 <div class="screenshot">
-                  <img alt="Web &amp; UI Design" src="img/2.png" />
+                  <img alt="members week - band photo" src="img/2.png" />
                 </div>
 
                 <div class="caption">
@@ -150,7 +159,7 @@
                 <h2 class="section-content-title"><a class="event-title-link">Book and Music Fair</a></h2>
 
                 <div class="screenshot">
-                  <img alt="Web &amp; UI Design" src="img/3.png" />
+                  <img alt="book and music fair - person playing saxophone" src="img/3.png" />
                 </div>
 
                 <div class="caption">
@@ -183,7 +192,7 @@
             <div class="event-container">
                 <div class="event-date">November 24th - 8:00am</div>
                 <div class="event-row">
-                    <img src="img/1.png" />
+                    <img src="img/1.png" alt="fiona boyes - drum kit image"/>
                     <div class="event-info">
                         <h3 class="event-title">Fiona Boyes – Professin’ the Blues</h3>
                         <p>
@@ -196,7 +205,7 @@
              <div class="event-container">
                 <div class="event-date">November 24th - 8:00am</div>
                 <div class="event-row">
-                    <img src="img/2.png" />
+                    <img src="img/2.png" alt="arts cafe - band image" />
                     <div class="event-info">
                         <h3 class="event-title">Arts Cafe</h3>
                         <p>
@@ -209,7 +218,7 @@
              <div class="event-container" id="last">
                 <div class="event-date">November 24th - 8:00am</div>
                 <div class="event-row">
-                    <img src="img/3.png" />
+                    <img src="img/3.png" alt="the movie club - person playing saxophone"/>
                     <div class="event-info">
                         <h3 class="event-title">The Movie Club</h3>
                         <p>
@@ -244,15 +253,15 @@
     </section>
     <section class="sponsors">
         <ul>
-            <li><img src="img/sponsors/1.png" alt=""></li>
-            <li><img src="img/sponsors/2.jpg" alt=""></li>
-            <li><img src="img/sponsors/3.png" alt=""></li>
-            <li><img src="img/sponsors/4.png" alt=""></li>
-            <li><img src="img/sponsors/5.png" alt=""></li>
-            <li><img src="img/sponsors/6.png" alt=""></li>
-            <li><img src="img/sponsors/7.png" alt=""></li>
-            <li><img src="img/sponsors/8.png" alt=""></li>
-            <li><img src="img/sponsors/9.jpg" alt=""></li>
+            <li><img src="img/sponsors/1.png" alt="Sponsor - CBAA"></li>
+            <li><img src="img/sponsors/2.jpg" alt="Art Song Canberra"></li>
+            <li><img src="img/sponsors/3.png" alt="CSG - more than you expect"></li>
+            <li><img src="img/sponsors/4.png" alt="Canberra Theatre"></li>
+            <li><img src="img/sponsors/5.png" alt="grammophone"></li>
+            <li><img src="img/sponsors/6.png" alt="he hungry buddha"></li>
+            <li><img src="img/sponsors/7.png" alt="infinite"></li>
+            <li><img src="img/sponsors/8.png" alt="into tomorrow"></li>
+            <li><img src="img/sponsors/9.jpg" alt="ray white"></li>
         </ul>
     </section>
     <footer id="footer">
