--- a/member.html
+++ b/member.html
@@ -67,7 +67,8 @@
             <p>Thank you for your interest in joining or renewing your membership of ArtSoundFM.  
                   Your membership entitles you to some great benefits – but most importantly, you’ll
                    have the satisfaction of supporting Canberra arts and music.
-            </p>   
+            </p>  
+            <br> 
             <p>We have the following membership categories:</p> 
 
             <ul>
@@ -101,9 +102,11 @@
             <div class="panel-info">
                 <form class="donate-form">
                     <div>
-                        <input type="text" id="name" name="org_name" placeholder="Amount (AUD)" />
+                    <label for="org-name">Donation amount</label>
+                        <input type="text" id="name" name="org-name" placeholder="Amount (AUD)" />
                     </div>
                     <div>
+                    <label for="event-name">Your name</label>
                         <input type="text" id="event-name" name="event-name" placeholder="Name" />
                     </div> 
                     <div>
